--- a/question/index.html
+++ b/question/index.html
@@ -7,11 +7,20 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js" defer></script>
     <script src="/questions/questions.js"></script>
+    <script src="/tools.js" defer></script>
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    <div class="pt-12 md:pt-24 w-full mx-auto text-custom">
-        <p class="text-2xl px-12 mx-auto w-full">🔥<span id="streak">0</span></p>
+    <div class="pt-12 md:pt-16 w-full mx-auto text-custom">
+        <!-- <p class="text-lg px-12 pb-2 mx-auto w-full text-blue-600"><a href="/">&lt; Back</a></p> -->
+        <div>
+            <div class="flex flex-col float-right">
+                <p class="text-2xl px-12 ml-auto">Top🔥<span id="topStreak">0</span></p>
+                <p class="text-2xl px-12 ml-auto">Current🔥<span id="streak">0</span></p>
+            </div>
+            
+            <p class="float-left px-2 w-24 py-2 mb-4 mx-12 text-lg border-4 border-solid rounded-2xl text-center border-custom-primary cursor-pointer" onclick="window.location.href='/'">&lt; Back</p>
+        </div>
         <div class="flex flex-col w-full md:flex-row mx-auto text-custom">
             <div class="w-1/2 m-12 text-lg">
                 <p id="text">
@@ -29,7 +38,7 @@
         <p class="px-3 w-32 mx-auto py-2 mb-4 text-xl border-4 border-solid rounded-2xl text-center border-custom-primary cursor-pointer" id="checkButton" onclick="checkAnswer()">Check</p>
         <p class="px-3 w-32 mx-auto py-2 mb-4 text-xl border-4 border-solid rounded-2xl text-center border-custom-primary cursor-pointer hidden" id="nextButton" onclick="nextQuestion()">Next</p>
 
-        <div id="rationale" class="w-1/2 m-12 text-lg mx-auto hidden">
+        <div id="rationale" class="w-1/2 m-12 pb-12 text-lg mx-auto hidden">
             
         </div>
     </div>
